# pgrac

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  README.md  configure  configure.ac
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  fast.yml  nightly.yml  perf.yml  release.yml
codex_review/: spec-2.40-stage2-acceptance-codereview-2026-05-23.md  spec-3.1-tt-status-foundation-codereview-2026-05-23.md  spec-3.2-mvcc-cluster-path-codereview-2026-05-23.md  spec-3.3-snapshot-consistency-brainstorm-review-2026-05-23.md  spec-3.4c-codereview-closeout-2026-05-25.md  spec-3.4c-multinode-performance-codereview-todo-2026-05-25.md
contrib/pg_surgery/: heap_surgery.c
docs/: perf-gates.md
docs/architecture/: overview.md
docs/cluster/: clean-leave.md  ges-bast-deadlock.md  ges-grant.md  grd-entry-lifecycle.md  node-removal.md  rdma-transport.md  shared-storage-backends.md  spec-6.13-rdma-tier3-zero-copy.md  spec-6.13-ship-report.md
docs/reference/: ges-lock-modes.md  system-views.md  wait-events.md
docs/release-notes/: v0.5.0-beta.md
docs/user-guide/: beta.md  bootstrap.md  configuration.md  verification.md  wal-threads.md
log/: regress_log_019_smgr_cluster  regress_log_061_lmon_skeleton
scripts/ci/: baseline-diff.py  check-format.sh  check-ges-mode-gate.sh  check-no-clog-overlay.sh  check-release-notes-principle0.sh  check-scn-cmp-gate.sh  (+6 more)
src/: Makefile.global.in
src/backend/access/rmgrdesc/: Makefile  clusteradgdesc.c  clusteritldesc.c  clusterrawdesc.c  clusterundodesc.c  clusterxidstripedesc.c  meson.build  seqdesc.c  xactdesc.c
(+1694 files in other folders)
