# Copyright (c) 2022-2023, PostgreSQL Global Development Group

# used by frontend programs like pg_waldump
# PGRAC: spec-6.0a adds clusterrawdesc.c for RM_CLUSTER_RAW_LAYOUT.
rmgr_desc_sources = files(
  'brindesc.c',
  'clogdesc.c',
  'clusteradgdesc.c',
  'clusterrawdesc.c',
  'clusterundodesc.c',
  'committsdesc.c',
  'dbasedesc.c',
  'genericdesc.c',
  'gindesc.c',
  'gistdesc.c',
  'hashdesc.c',
  'heapdesc.c',
  'logicalmsgdesc.c',
  'mxactdesc.c',
  'nbtdesc.c',
  'relmapdesc.c',
  'replorigindesc.c',
  'rmgrdesc_utils.c',
  'seqdesc.c',
  'smgrdesc.c',
  'spgdesc.c',
  'standbydesc.c',
  'tblspcdesc.c',
  'xactdesc.c',
  'xlogdesc.c',
)

backend_sources += rmgr_desc_sources
